--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# spring.jpa.properties.hibernate.dialect=org.hibernate.MySQL5InnoDBDialect
+application-description=E-Commerce Application
+application-version=1.0
 
